client/src/components/projects.css
.projectsText {
    color: #fff;
}

.projectImage {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.projectsTop, .projectsBottom {
    height: 50%;
    background-color: #DD0100;
}

.projectsTop {
    text-align: center;
}

.projectsBottom {
    padding: 0 0.5vw;
}

